# unda

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  best_network.json  build.rs  mnist_weight_check.json  out.triton  test.json  test2.npy  xor_model.triton  xor_net.cbor  xor_net.json
.github/workflows/: clippy.yml  rust.yml
examples/: mnist.rs  mnist_xla.rs  xor.rs
examples/breast_cancer/: main.rs  med_model.rs
examples/disease_pred/: main.rs
save/: net.json
src/: lib.rs  main.rs  test.csv  tree.rs
src/core/: error.rs  mod.rs  network.rs
src/core/data/: input.rs  matrix.rs  matrix3d.rs  mod.rs
src/core/graph/: autodiff.rs  callsite.rs  compile.rs  constant.rs  consteval.rs  context.rs  dimension.rs  dtypes.rs  logic.rs  math.rs  mod.rs  node.rs  operation.rs  parameter.rs  shape.rs  subterm.rs  tests.rs  tests_cpu.rs
src/core/layer/: conv.rs  dense.rs  layers.rs  mod.rs
src/core/layer/methods/: activations.rs  errors.rs  mod.rs  noise.rs  pair.rs
src/core/model/: mod.rs  model.rs  model_builder.rs  model_setters.rs  model_state.rs  param.rs  tests.rs
src/core/models/: activations.rs  layers.rs  loaded_model.rs  losses.rs  metrics.rs  model.rs  tests.rs
src/core/neural_net/prelude/: initializers.rs  mod.rs
src/core/nn/prelude/: activations.rs  initializers.rs  mod.rs  optimizers.rs  tests.rs
src/core/serialize/: ser_layer.rs
src/cuda/: CUDA_README.md
src/graph/: autodiff.rs  callsite.rs  constant.rs  consteval.rs  context.rs  dtypes.rs  math.rs  merge.rs  mod.rs  node.rs  operation.rs  shape.rs  subterm.rs  tests.rs  tests_cpu.rs
src/helper/: data_vis.rs  mnist.rs  mod.rs
src/models/: activations.rs  initializers.rs  layers.rs  loaded_model.rs  losses.rs  metrics.rs  mod.rs  model.rs  supervised.rs  supervised_model.rs  tests.rs
src/network/: activations.rs  helper.rs  input.rs  matrix.rs  matrix3d.rs  matrix_flat.rs  mod.rs  modes.rs  network.rs
src/network/layer/: conv.rs  dense.rs  distributions.rs  layers.rs  mod.rs  noise.rs  pair.rs
src/network/serialize/: mod.rs  ser_layer.rs
src/training/: mod.rs  optimizer.rs
src/util/: categorical.rs  csv_parser.rs  data_vis.rs  mnist.rs  mod.rs
src/util/mnist/: train-images.idx3-ubyte:Zone.Identifier  train-labels.idx1-ubyte:Zone.Identifier
