[package]
name = "unda"
version = "0.2.2"
authors = ["BradenEverson <bradeneverson@gmail.com>", "Ebanflo42", "Atlas Dostal <email@atlasdostal.com>"]
description = "General purpose machine learning crate for neural network development and analysis"
edition = "2021"
license = "MIT"
repository = "https://github.com/unda-ml/unda"
categories = ["science"]
keywords = [
    "machine-learning",
    "deep-learning",
    "dense-neural-network",
    "convolutional",
    "ai"
]

[dependencies]
csv = {version = "1.3.0", optional = true}
futures = "0.3"
itertools = "0.12"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
rand_seeder = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
typetag = "0.2"
slotmap = "1"
backtrace = "0.3"
smallvec = "1.13"
strum = "0.26"
strum_macros = "0.26"
xla = { git = "https://github.com/unda-ai/xla-rs", version = "0.1.6" , branch = "main" }
thiserror = "1"
half = "2.4.0"
byteorder = "1.5"

[features]
default = ["util"]
util = ["csv"]
