[package]
name = "unda"
version = "0.2.2"
authors = ["BradenEverson <bradeneverson@gmail.com>", "Ebanflo42", "Atlas Dostal <email@atlasdostal.com>"]
description = "General purpose machine learning crate for neural network development and analysis"
edition = "2021"
license = "MIT"
repository = "https://github.com/unda-ml/unda"
categories = ["science"]
keywords = [
    "machine-learning",
    "deep-learning",
    "dense-neural-network",
    "convolutional",
    "ai"
]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
slotmap = "1"
backtrace = "0.3"
smallvec = "1.13"
strum_macros = "0.26"
xla = { git = "https://github.com/unda-ml/xla-rs", version = "0.1.6" , branch = "main" }
thiserror = "1"
half = "2.4.0"
byteorder = "1.5"
